--- a/index.html
+++ b/index.html
@@ -5993,7 +5993,7 @@ aichat --rag <RAG>                      # Démarrer un RAG
   </div>
 
   <!-- Lien Annexe Commandes Windows > -->
-<a href="Windows/windows-annexe-complete.html" 
+<a href="Windows/Base-de-données-commandes-Windows.html" 
    class="floating-button"
    style="position: fixed; bottom: 30px; right: 30px; background: linear-gradient(135deg, #3498db 0%, #2c3e50 100%); color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 24px; box-shadow: 0 4px 12px rgba(0,0,0,0.2); text-decoration: none; z-index: 1000;">
     <i class="fab fa-windows"></i>
@@ -6377,5 +6377,6 @@ aichat --rag <RAG>                      # Démarrer un RAG
 </body>
 
 </html>
+
 
 
